--- a/package.yaml
+++ b/package.yaml
@@ -16,6 +16,8 @@ dependencies:
   - base >= 4.7 && < 10
   - classy-prelude >= 1.5 && < 2
   - free
+  - shakespeare
+  - text
   - transformers
 
 default-extensions:
